# YesBroker

./: .env.example  .gitignore  README.md  ghar_checker_arch.html  gharcheck-architecture.html  index.html  mock_server.py  package-lock.json  pyproject.toml  schema.py
backend/: app.py  arbiter.py  collect.py  extract.py  listing_store.py  media.py  orchestrator.py  planner.py  planner_agent.py  precompute.py  reflection.py  schema.py  scoring.py  share_store.py  trace.py  trace_demo.py
backend/agents/: __init__.py  _path.py  base.py  commute.py  confidence.py  evidence.py  photo.py  price.py  recommendations.py  result_utils.py  text.py  web.py
backend/data/: listings.json  medians.json  scams_seed.json  scores.json
backend/raw/: scraped_listings.json  scraped_page.html
backend/tests/: conftest.py  test_agents_unit.py  test_orchestration.py  test_production_upgrades.py  test_visual_features.py
frontend/: app.js  index.html  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/legacy/: app.js  style.css
frontend/lib/: api.ts  evidence.ts  mock-data.ts  types.ts
new_frontend/: package-lock.json
new_frontend/app/: globals.css  layout.tsx  page.tsx
new_frontend/components/: agent-findings.tsx  agent-pipeline.tsx  aurora-background.tsx  auth-screen.tsx  logo.tsx  (+7 more)
scratch/: test_live_backend.py
tools/: README.md  __init__.py  collect.py  gemini_client.py  google_search.py  maps.py  ocr.py  schemas.py  scrape_live_requirement.py  simulate_preference_match.py  test_tools.py  vision.py
(+20 files in other folders)
